pattern: Visitor - ComputerPart + Mockito tests